fix: navbar item alignments

--- a/public/style.css
+++ b/public/style.css
@@ -17,6 +17,10 @@ nav a {
 /*
 navbar
 */
+.conditionals {
+  display: flex;
+  align-items: center;
+}
 /* .navbar {
   list-style-type: none;
   margin: 0;
